--- a/docs/css/templatemo-xtra-blog.css
+++ b/docs/css/templatemo-xtra-blog.css
@@ -76,10 +76,10 @@ hr {
     padding: 80px 100px 25px;
 }
 
-.tm-post { max-width: 600px; }
+
 
 .tm-row {
-    max-width: 980px;
+   
     justify-content: space-between;
 }
 
@@ -204,7 +204,7 @@ ul {
     position: relative;
 	display: block;
 	min-height: 100%;
-	max-width: 100%;
+
 	opacity: 0.8;
 }
 
@@ -311,7 +311,7 @@ ul {
 .tm-prev-next-wrapper,
 .tm-paging-wrapper {
     flex: 0 0 50%;
-    max-width: 50%;
+    
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -344,15 +344,15 @@ video {
     border-radius: 0;
 }
 
-.tm-comment-form { max-width: 360px; }
+
 .tm-category-list { list-style-type: none; }
 figure { margin: 0; }
 figcaption { line-height: 1.4; }
 
-.tm-post-full { max-width: 600px; }
+.tm-post-full {  }
 
 .tm-post-sidebar {
-    max-width: 280px;
+ 
     margin-left: auto;
     margin-right: 0;
 }
@@ -371,7 +371,7 @@ figcaption { line-height: 1.4; }
 .tm-mb-120 { margin-bottom: 120px; }
 .tm-mt-40 { margin-top: 40px; }
 .tm-mt-100 { margin-top: 100px; }
-.tm-mr-20 { margin-right: 20px; }
+
 .tm-color-primary, span.tm-color-primary { color: #099; }
 a.tm-color-gray, .tm-color-gray { color: #999; }
 a.tm-color-gray:hover { color: #099; }
@@ -385,7 +385,7 @@ a:hover {
 a:hover figcaption { color: #056767; }
 .img-thumbnail { max-width: none; }
 .tm-about-pad { padding: 40px 35px; }
-.tm-person { max-width: 430px; }
+
 .tm-line-height-short { line-height: 1.8; }
 
 .gmap_canvas {
@@ -416,183 +416,9 @@ a:hover figcaption { color: #056767; }
 .tm-social-links li a:hover i.fa-instagram { color: #3f729b; }
 
 .tm-contact-right { padding-left: 55px; }
-.tm-contact-form { max-width: 488px; }
 
 .tm-contact-form input,
-.tm-contact-form textarea {
-    max-width: 360px;
-}
+
 
 .tm-contact-form label { font-size: 1.4rem; }
 .tm-contact-form .form-group { display: flex; }
-
-@media (max-width: 1540px) {
-    .tm-header { width: 320px; }
-
-    .tm-main {
-        margin-left: 320px;
-        width: calc(100% - 320px);
-    }
-}
-
-@media (max-width: 1300px) {
-    .tm-about-col {
-        flex: 0 0 100%;
-        max-width: 100%;
-        margin-bottom: 30px;
-    }
-}
-
-@media (max-width: 1288px) {
-    .tm-social-link { margin-right: 10px; }
-}
-
-@media (max-width: 1199px) {
-    .tm-post-sidebar { max-width: 440px; }
-    .form-inline .form-control.tm-search-input { width: 420px; }
-}
-
-@media (max-width: 1086px) {
-    .form-inline .form-control.tm-search-input {
-        width: 80%;
-        margin-right: 15px;
-    }
-}
-
-/* Hide sidebar */
-@media (max-width: 991px) {
-    .tm-header {
-        width: 320px;
-        left: -320px;        
-        transition: all 0.3s ease;
-    }
-
-    .tm-header.show { left: 0; }
-    .tm-header-wrapper { padding: 15px; }
-
-    .navbar-toggler {
-        display: block;
-        position: fixed;
-        left: 0;
-        top: 0;
-        background-color: rgba(56, 204, 204, 0.75);
-        color: white;
-        padding: 10px 15px;
-        transition: all 0.3s ease;
-        border-radius: 0;
-        top: 5px;
-    }
-
-    .tm-header.show .navbar-toggler { left: 320px; }
-
-    .tm-main {
-        margin-left: 0;
-        padding: 50px 40px;
-        width: 100%;
-    }
-
-    .tm-post-sidebar {
-        margin-left: 0;
-        margin-right: auto;
-    }
-
-    .tm-person-col { width: 50%; }
-    .tm-person { flex-direction: row; }
-
-    .tm-contact-left {
-        flex: 0 0 58.333333%;
-        max-width: 58.333333%;
-    }
-
-    .tm-contact-right {
-        flex: 0 0 41.666667%;
-        max-width: 41.666667%;
-    }
-
-    .tm-post-full { max-width: none; }
-}
-
-@media (max-width: 767px) {
-    .form-inline .form-control.tm-search-input {
-        width: 70%;
-        max-width: 375px;
-        margin-right: 15px;
-    }
-
-    .tm-search-form { justify-content: flex-start; }
-    .tm-main { padding: 60px 10px; }
-
-    .tm-prev-next-wrapper,
-    .tm-paging-wrapper {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .tm-paging-wrapper { 
-        margin-top: 50px; 
-        justify-content: flex-start;
-    }
-
-    .tm-copyright { text-align: left; }
-}
-
-@media (max-width: 1199px) and (min-width: 992px) {
-    .tm-person-col,
-    .tm-contact-left,
-    .tm-contact-right {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .tm-contact-right { padding-left: 15px; }
-
-    .tm-post-col,
-    .tm-aside-col {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .tm-post-sidebar {
-        margin-left: 0;
-        margin-right: auto;
-    }
-}
-
-@media (max-width: 709px) {
-    .tm-person-col { width: 100%; }
-}
-
-@media (max-width: 991px) and (min-width: 826px) {
-    .tm-about-col {
-        flex: 0 0 33.3333%;
-        max-width: 33.3333%;
-    }
-
-    .tm-person { flex-direction: row; }
-}
-
-@media (max-width: 630px) {
-    .tm-contact-left,
-    .tm-contact-right {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .tm-contact-right { padding-left: 15px; }
-}
-
-@media (max-width: 575px) {
-    .tm-contact-form input, 
-    .tm-contact-form textarea {
-        max-width: 100%;
-    }
-}
-
-@media (max-width: 480px) {
-    .tm-person-col { width: 100%; }
-    .tm-person { flex-direction: row; }
-}
-
-@media (max-width: 380px) {
-    .tm-person img { max-width: 120px; }
-}
